objects/maps__Click2Create__c.object
<CustomObject>
    <fields>
        <fullName>maps__DefaultField__c</fullName>
        <label>Default Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__FieldSetOptions__c</fullName>
        <label>Field Set Options</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__MapClickCity__c</fullName>
        <label>Map Click City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MapClickCountry__c</fullName>
        <label>Map Click Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MapClickDefaultValue__c</fullName>
        <label>Map Click Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MapClickEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Map Click Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__MapClickFieldSet__c</fullName>
        <inlineHelpText>Developer/API Name of Field Set</inlineHelpText>
        <label>Map Click Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MapClickLatitude__c</fullName>
        <label>Map Click Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MapClickLongitude__c</fullName>
        <label>Map Click Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MapClickName__c</fullName>
        <label>Map Click Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MapClickPostalCode__c</fullName>
        <label>Map Click Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MapClickState__c</fullName>
        <label>Map Click State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MapClickStreet__c</fullName>
        <label>Map Click Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MyPositionCity__c</fullName>
        <label>My Position City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MyPositionCountry__c</fullName>
        <label>My Position Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MyPositionDefaultValue__c</fullName>
        <label>My Position Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MyPositionEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>My Position Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__MyPositionFieldSet__c</fullName>
        <inlineHelpText>Developer/API Name of Field Set</inlineHelpText>
        <label>My Position Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MyPositionLatitude__c</fullName>
        <label>My Position Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MyPositionLongitude__c</fullName>
        <label>My Position Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MyPositionName__c</fullName>
        <label>My Position Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MyPositionPostalCode__c</fullName>
        <label>My Position Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MyPositionState__c</fullName>
        <label>My Position State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MyPositionStreet__c</fullName>
        <label>My Position Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__ObjectAPIName__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__POICity__c</fullName>
        <label>POI City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__POICountryShort__c</fullName>
        <label>POI Country Short</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__POICountry__c</fullName>
        <label>POI Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__POIDefaultValue__c</fullName>
        <label>POI Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__POIEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POI Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__POIFieldSet__c</fullName>
        <inlineHelpText>Developer/API Name of Field Set</inlineHelpText>
        <label>POI Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__POILatitude__c</fullName>
        <label>POI Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__POILongitude__c</fullName>
        <label>POI Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__POIName__c</fullName>
        <label>POI Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__POIPhone__c</fullName>
        <label>POI Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__POIPostalCode__c</fullName>
        <label>POI Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__POIStateShort__c</fullName>
        <label>POI State Short</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__POIState__c</fullName>
        <label>POI State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__POIStreet__c</fullName>
        <label>POI Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__POIWebsite__c</fullName>
        <label>POI Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maps Click-2-Create Setting</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>maps__All</fullName>
        <columns>NAME</columns>
        <columns>maps__ObjectAPIName__c</columns>
        <columns>maps__MyPositionFieldSet__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Click-2-Create Setting</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Click-2-Create Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>